build/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ecommerce.example.com
    http:
      paths:
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8080
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: product
            port:
              number: 8080
      - path: /api/shops
        pathType: Prefix
        backend:
          service:
            name: shop
            port:
              number: 8080
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: order
            port:
              number: 8080
      - path: /api/warehouses
        pathType: Prefix
        backend:
          service:
            name: warehouse
            port:
              number: 8080
